name:                jarify
version:             0.1
synopsis:            Jarification of Haskell sources
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          felix.raimundo@tweag.io
copyright:           2017 EURL Tweag
category:            FFI, JVM, Java
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:
  src/main/java/io/tweag/jarify/HaskellLibraryLoader.java
  src/main/java/io/tweag/jarify/JarifyMain.java
  vendor/patchelf/bootstrap.sh
  vendor/patchelf/configure.ac
  vendor/patchelf/patchelf.1
  vendor/patchelf/README
  vendor/patchelf/version
  vendor/patchelf/*.am
  vendor/patchelf/*.spec.in
  vendor/patchelf/src/*.am
  vendor/patchelf/src/*.cc
  vendor/patchelf/src/*.h
  vendor/patchelf/tests/*.am
data-files:
  build/libs/stub.jar
  build/bin/patchelf

source-repository head
  type:     git
  location: https://github.com/tweag/jarify

custom-setup
  setup-depends:
    base >= 4.8,
    Cabal >= 1.24,
    directory >= 1.3,
    filepath >= 1.4

library
  include-dirs: cbits
  c-sources: cbits/bootstrap.c
  cc-options: -Wall -Werror
  build-depends: base >=4.8 && <5
  default-language: Haskell2010

executable jarify
  main-is: Jarify.hs
  build-depends:
    base >= 4.8 && < 5,
    bytestring >= 0.10,
    directory >= 1.2,
    filepath >= 1.4,
    jarify,
    process >= 1.2,
    regex-tdfa >= 1.2,
    temporary >= 1.2,
    temporary,
    text >= 1.2,
    unix,
    zip-archive >= 0.2
  default-language: Haskell2010
  ghc-options: -threaded
