load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "docs",
    out = "doc.md",
    input = "//clodl:clodl.bzl",
    deps = [
        ":refs",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "refs",
    srcs = ["@bazel_tools//tools:bzl_srcs"],
)
