name:                hello
version:             0.1
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          felix.raimundo@tweag.io
copyright:           2017 EURL Tweag
build-type:          Simple
cabal-version:       >=1.10

executable hello
  main-is: Hello.hs
  build-depends:
    base >=4.7 && <5
    , jarify
  default-language: Haskell2010
  ghc-options: -dynamic
  ld-options: -pie -Wl,-z,origin -Wl,-rpath,$ORIGIN
